# yolo-mlflow-runner-accelerator

./: .env  .gitignore  README.md  pyproject.toml  test.ipynb
yolo-mlflow-runner/: .env  Dockerfile  README.md  requirements.txt  train.py
