[project]
name = "army-project-trainings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "albumentations>=2.0.8",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "mlflow>=3.10.0",
    "sahi>=0.11.36",
    "supervision>=0.27.0.post1",
    "ultralytics>=8.4.16",
]
